# BackgroundWorker

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  pytest.ini
background-service/service/: .dockerignore  Dockerfile  main.py  pyproject.toml
background-service/service/background_app/routers/: checkers.py  dependencies.py  task.py
background-service/service/background_app_tests/: conftest.py  helpers.py
background-service/service/background_app_tests/routers/: test_task.py
gstream-library/: Makefile  pyproject.toml
gstream-library/gstream/: core_models.py  models.py
gstream-library/gstream/files/: base.py  binary.py  readers.py  scripts.py  writers.py
gstream-library/gstream/kernels/: delays_finder.c  diff_function.c
gstream-library/gstream/node/: common.py  gpu_rig.py  gpu_task.py
gstream-library/gstream/storage/: file_system.py  redis.py
gstream-library/gstream/worker/: base.py  delays_finder.py  diff_function.py  task_pull.py
gstream-library/gstream_tests/files/: binary_tests.py  test_base.py  test_binary.py  test_readers.py  test_scripts.py  test_writers.py
gstream-library/gstream_tests/node/: test_common.py  test_gpu_rig.py  test_gpu_task.py
gstream-library/gstream_tests/storage/: test_file_system.py  test_redis.py
gstream-library/tests/files/: binary_tests.py  test_base.py
redise-service/: Dockerfile  good-config.conf
worker-service/service/: main.py  pyproject.toml
