[tool.poetry]
name = "backgroundworker"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
isort = "^5.13.2"
flake8 = "^7.0.0"
coverage = "^7.4.1"
pre-commit = "^3.5.0"
pytest = "^8.0.0"
pyhamcrest = "^2.1.0"
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
