[tool.poetry]
name = "gstream"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "1.24.3"
pyopencl = "^2024.1"
psutil = "^5.9.8"
aiofiles = "^23.2.1"
anyio = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
